Mon Nov 27 20:46:02 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.hh: Use Birnet::int64 instead of gint64 avoids printf
	compiler warnings on AMD64.

Mon Nov 20 23:39:31 2006  Tim Janik  <timj@gtk.org>

	* sfiwrapper.h, sfiwrapper.cc: wrapped C++ Msg API.

	* glib-extra.h: removed g_static_assert(), we now have BIRNET_STATIC_ASSERT().

	* sfimsg.h, sfimsg.c: removed, obsoleted by C++ Msg API wrapper.

	* tests/misctests.c: added some sfi_msg_*() tests, mostly to check
	compilability of the provided macros.

	* tests/testsfidl.cc: fixed compiler warnings.

Wed Nov 15 00:23:44 2006  Tim Janik  <timj@gtk.org>

	* sfidl-parser.cc (parseParamHints): serialize int parameters with LL
	prefix, to allow values >= 2^31.

Tue Oct 24 23:51:55 2006  Tim Janik  <timj@gtk.org>

	* sfitests.h (sfi_init_test): setup CPU name similar to birnet_init_test().

Sat Oct 21 17:29:05 2006  Tim Janik  <timj@gtk.org>

	* sfitests.h, sfiwrapper.cc: adapt to init settings changes.

Sat Oct  7 23:01:54 2006  Tim Janik  <timj@gtk.org>

	* sfitests.h: header file to be included by test programs.

Sat Oct  7 20:33:04 2006  Tim Janik  <timj@gtk.org>

	* sfiwrapper.cc, sfiwrapper.h: provide integer types.
	wrap cpu info and threading APIs. changed callers to use
	the wrapped SFI variants.

	* sfitypes.h: removed obsoleted cruft.

	* tests/misctests.c: added compilation test for all threading
	macros.

Fri Oct  6 23:13:05 2006  Tim Janik  <timj@gtk.org>

	* sfiwrapper.h, sfiwrapper.cc: C API wrapper around useful
	Birnet utilities.

Fri Oct  6 18:53:35 2006  Tim Janik  <timj@gtk.org>

	* sfimsg.h, sfimsg.c: renamed and moved here from birnet/. 
	changed callers.

	* sficxx.cc: don't shadow "sfi_init" symbol.

	* sfitypes.h: removed portions covered by sfimsg.h.

Tue Oct  3 18:44:43 2006  Tim Janik  <timj@gtk.org>

	* moved remaining sfi/ tests to sfi/tests.

	* tests/misctests.c: moved here from sfi/testsfi.c.

	* tests/testsfidl.cc:
	* tests/testidl.idl: moved here from sfi/.
